# milvus

./: CODEOWNERS  docker-compose.yml  go.mod
cmd/roles/: roles.go
configs/: milvus.yaml
deployments/docker/dev/: docker-compose-apple-silicon.yml
internal/accessmanager/: access_manager.go
internal/core/: CMakeLists.txt  build.sh  conanfile.py
internal/core/src/: CMakeLists.txt
internal/core/src/common/: type_c.h
internal/core/src/dpccvsaccessmanager/: CMakeLists.txt  DpcCvsAccessManagerClient.cpp  DpcCvsAccessManagerClient.h  dpccvsaccessmanager.pc.in
internal/core/src/indexbuilder/: CMakeLists.txt  index_c.cpp
internal/core/src/pb/: CMakeLists.txt
internal/core/src/segcore/: Utils.cpp  load_index_c.cpp
internal/core/unittest/: CMakeLists.txt  test_collection_chunk_manager.cpp  test_dpc_cvs_access_manager_client.cpp
internal/datacoord/: garbage_collector.go  index_builder.go  server.go
internal/indexnode/: fabric_chunk_mgr_factory.go  indexnode.go  task.go
internal/proto/: dpc_cvs_access_manager.proto  dpc_go_cvs_access_manager.proto  index_coord.proto
internal/storage/: azure_object_storage.go  fabric_factory.go  fabric_remote_chunk_manager.go  minio_object_storage.go  options.go  remote_chunk_manager.go
internal/types/: types.go
internal/util/dependency/: fabric_factory.go
internal/util/indexcgowrapper/: build_index_info.go
internal/util/initcore/: init_core.go
pkg/: go.mod
pkg/util/paramtable/: component_param.go  grpc_param.go
pkg/util/typeutil/: type.go
scripts/: generate_proto.sh  install_deps.sh
(+11 files in other folders)
